# Quantum-Chemistry-Codes

CCD/: CCD.py  Options2.ini
CCD/old/: CCD_almostdonehowtoeinsum.py  CCD_final.py  ec_CEPA0_finalv2.py  final_CCD.py
CEPA/: CEPA0_final.py  Options.ini  ec_CEPA0_final.py
CEPA/old/: CEPA0.py  CEPAtest.py  Options1.ini  test2CEPA.py
CEPA/test/: Options.ini
CIS/: Options.ini  bestCIS.py  eigCIS.py  eighCIS.py  notes  psi.500.clean  test.py
CIS/old/: MP2doc.py
DIIS/: DIIS_islentheproblem.py  Options3.ini  Options4.ini  UHFDIIS_avge.py  buildthisup.py  classnotes
DIIS/old/: DIISbmat.py  UHFDIIS_avge.py
MP2/: Options1.ini  Options2.ini  Options3.ini  fastMP2_welldocumented.py  notes
MP2/C++_pybind11_MP2/: CMakeLists.txt  demo_MP2.py  mp2.cpp
MP2/DF_MP2/: dfMP2_final.py
MP2/OMP2/: OMP2_final.py  OMP2_test.py  OMP2correctalgebra.py  psi.19.clean
MP2/fast_MP2/: Options.ini  test.py
MP2/original_MP2/: MP2.py
OMP2/: OMP2working_wrongalgebra.py  Options1.ini  notes  test.py
Quantum_Chemistry_Module/: integrals.py  molecule.py  test.py
Quantum_Chemistry_Module/Quantum_Chemistry_Module/: __init__.py  hartree_fock.py  mp2.py  (+4 more)
ROHF/: .ROHF.py.swp  ROHF.py
Standalone_Quantum_Chem_Codes/: README.md
UHF/: Hartree-Fock.ipynb  UHFcode.py  integrals.py  newoptions.ini  psi.200.clean  psi.219.clean  psi.81.clean  test.py  testyourcode.py
UHF_qutip/: UHFcode.py
density_fitting/: Options1.ini  messup.py  notes  test.py
integrals/: integrals.py  recursion.py  working_all.py
juptyer_notebooks/: 8a_notation.ipynb
psi4numpy/: CCD.py  CEPA0.py  CIS.py
(+68 files in other folders)
